--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>About Me</h1>
+<p>My name is Shifa Rabaja and I currenty attend Thomas A. Edison CTE High School as a Senior. My birthday is July 30 and my favorite season is fall .</p>
 
 </body>
 </html>
