--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Shifa Rabaja - Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shifa Rabaja - Student Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>Shifa Rabaja</h1>
+            <p>Web & App Developer<br>Thomas A. Edison CTE High School</p>
+            <p>DOB: 07-30-2007<br>Phone: 347-425-2631<br>Email: rabajashifa@gmail.com</p>
+        </header>
+        
+        <section class="summary">
+            <h2>Short Summary</h2>
+            <p>A brief personal introduction or declaration statement goes here.</p>
+        </section>
 
-<h1>About Me</h1>
-<p>My name is Shifa Rabaja and I currenty attend Thomas A. Edison CTE High School as a Senior. My birthday is July 30 and my favorite season is fall .</p>
+        <section class="experience">
+            <h2>My Experience</h2>
+            <ul>
+                <li>Experience item 1</li>
+                <li>Experience item 2</li>
+                <li>Experience item 3</li>
+            </ul>
+        </section>
 
+        <section class="skills">
+            <h2>Skills & Achievements</h2>
+            <ul>
+                <li>Skill or achievement 1</li>
+                <li>Skill or achievement 2</li>
+                <li>Skill or achievement 3</li>
+            </ul>
+        </section>
+
+        <section class="portfolio">
+            <h2>Projects</h2>
+            <p>Links to projects or images of projects can be displayed here.</p>
+        </section>
+
+        <footer>
+            <a href="resume.pdf" class="resume-link">Download Resume</a>
+        </footer>
+    </div>
 </body>
 </html>
