--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>Shifa Rabaja</h1>
             <p>Web & App Developer<br>Thomas A. Edison CTE High School</p>
-            <p>DOB: 07-30-2007<br>Phone: 347-425-2631<br>Email: rabajashifa@gmail.com</p>
+            <p>Email: rabajashifa@gmail.com</p>
         </header>
         
         <section class="summary">
