--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
         
         <section class="summary">
             <h2>Short Summary</h2>
-            <p>A brief personal introduction or declaration statement goes here.</p>
+            <p>brief introduction...</p>
         </section>
 
         <section class="experience">
             <h2>My Experience</h2>
             <ul>
-                <li>Experience item 1</li>
-                <li>Experience item 2</li>
-                <li>Experience item 3</li>
+                <li>adfs</li>
+                <li>fdas</li>
+                <li>sdfa</li>
             </ul>
         </section>
 
         <section class="skills">
             <h2>Skills & Achievements</h2>
             <ul>
-                <li>Skill or achievement 1</li>
-                <li>Skill or achievement 2</li>
-                <li>Skill or achievement 3</li>
+                <li>efwa</li>
+                <li>fdsaw</li>
+                <li>dsfaw</li>
             </ul>
         </section>
 
         <section class="portfolio">
             <h2>Projects</h2>
-            <p>Links to projects or images of projects can be displayed here.</p>
+            <p>links to projects</p>
         </section>
 
         <footer>
