--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <header>
+            <img src="https://t3.ftcdn.net/jpg/02/39/98/48/360_F_239984893_m8NmN3aTbmBwWgMfN0VqCl5gaQxoAP6n.jpg">
             <h1>Shifa Rabaja</h1>
             <p>Web & App Developer<br>Thomas A. Edison CTE High School</p>
             <p>Email: rabajashifa@gmail.com</p>
