--- a/index.html
+++ b/index.html
@@ -3,49 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shifa Rabaja - Student Portfolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <img id="image" src="https://t3.ftcdn.net/jpg/02/39/98/48/360_F_239984893_m8NmN3aTbmBwWgMfN0VqCl5gaQxoAP6n.jpg">
-            <h1>Shifa Rabaja</h1>
-            <p>Web & App Developer<br>Thomas A. Edison CTE High School</p>
-            <p>Email: rabajashifa@gmail.com</p>
-        </header>
-        
-        <section class="summary">
-            <h2>Short Summary</h2>
-            <p>brief introduction...</p>
-        </section>
-
-        <section class="experience">
-            <h2>My Experience</h2>
+    <header>
+        <h1>My Portfolio</h1>
+        <nav>
             <ul>
-                <li>adfs</li>
-                <li>fdas</li>
-                <li>sdfa</li>
+                <li><a href="index.html">About Me</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I'm a senior in high school with a passion for web and app development. Welcome to my portfolio!</p>
         </section>
-
-        <section class="skills">
-            <h2>Skills & Achievements</h2>
-            <ul>
-                <li>efwa</li>
-                <li>fdsaw</li>
-                <li>dsfaw</li>
-            </ul>
-        </section>
-
-        <section class="portfolio">
-            <h2>Projects</h2>
-            <p>links to projects</p>
-        </section>
-
-        <footer>
-            <a href="resume.pdf" class="resume-link">Download Resume</a>
-        </footer>
-    </div>
+    </main>
 </body>
 </html>
