--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I'm a senior in high school with a passion for web and app development. Welcome to my portfolio!</p>
+            <p>Hello! I am currently a senior attending Thomas A. Edison CTE High School and my CTE major is web and app development. Welcome to my portfolio!</p>
+        </section>
+        
+        <section id="Skills">
+            <h2>My Skills</h2>
+            <p>
+            <ul>
+                <li>sdifah</li>
+                <li>sdifah</li>
+                <li>sdifah</li>
+            </ul>    
+            </p>
         </section>
     </main>
 </body>
