--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,78 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>My Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">About Me</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="resume">
+            <h2>Resume</h2>
+            <div class="resume-section">
+                <h3>Education</h3>
+                <p>Thomas A. Edison Career and Technical Education High School - Queens, NY 11432</p>
+                <p>Anticipated Graduation: 2025</p>
+            </div>
+            <div class="resume-section">
+                <h3>Internships & Experience</h3>
+                <ul>
+                    <li><strong>Bloomberg Arts Internship (June-August 2024)</strong> - Developed project management skills, designed a brochure for warehouse employees, and conducted customer surveys to improve warehouse operations.</li>
+                    <li><strong>ISP Spring Art Internship (March-May 2024)</strong> - Developed professional skills through mentorship and various job responsibilities.</li>
+                    <li><strong>Summer Design Institute 2023</strong> - Contributed hands-on and digital creativity with design principles.</li>
+                    <li><strong>Summer Youth Employment Program 2022</strong> - Acquired project-based learning, research, and leadership skills.</li>
+                </ul>
+            </div>
+            <div class="resume-section">
+                <h3>Hackathons & Bootcamps</h3>
+                <ul>
+                    <li><strong>Infosys/Pencil App Challenge Bootcamp (2023-2024)</strong> - Focused on prototyping and app development for community social issues in a collaborative environment.</li>
+                </ul>
+            </div>
+            <div class="resume-section">
+                <h3>Activities</h3>
+                <ul>
+                    <li>SkillsUSA (2024-current)</li>
+                    <li>Junior Reserve Officer Training Corps (2023-current)</li>
+                    <li>National Science Honor Society (2023-current)</li>
+                    <li>Green Thumb Society Club (2023-2024)</li>
+                    <li>Art Club (2021-2024)</li>
+                    <li>DECA Club - Business & Finance (2022-2023)</li>
+                    <li>GlamourGals & Guys Club (2022-2023)</li>
+                </ul>
+            </div>
+            <div class="resume-section">
+                <h3>Awards and Achievements</h3>
+                <ul>
+                    <li>NYIT Business Bootcamp Certificate 2023</li>
+                    <li>Hackathon Certificate 2023</li>
+                    <li>Mouse/Figma Times Square Billboard Advertisement Campaign - CollieAssist App 2024</li>
+                    <li>The Enlisted Association Award of Merit at the JROTC Military Ball 2024</li>
+                </ul>
+            </div>
+            <div class="resume-section">
+                <h3>Skills and Abilities</h3>
+                <ul>
+                    <li>Publicity and Marketing - Social Media Coordinator</li>
+                    <li>Time Management - Internship/Program Experience</li>
+                    <li>Leadership, Academic, and Disciplinary Skills - Bravo Company First Platoon Sergeant JROTC</li>
+                    <li>Certified in Python, HTML, CSS, JavaScript; Web & App Development</li>
+                </ul>
+            </div>
+        </section>
+    </main>
+</body>
+</html>
