--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <p>Hello! I am currently a senior attending Thomas A. Edison CTE High School and my CTE major is web and app development. Welcome to my portfolio!</p>
         </section>
         
+        <section id="experience">
+            <h2>My Experience</h2>
+            <p>.....</p>
+        </section>
+        
         <section id="Skills">
             <h2>My Skills</h2>
             <p>
