--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         
         <section id="experience">
             <h2>My Experience</h2>
-            <p>.....</p>
+            <p>Throughout my high school experience, I've had the priviledge of learning all about human centive design thinking and what it means to create an app. I have learned to empathize with users and target audiences to create a capable and productive app in many types of programs like Figma and code.org. I have also learned.....</p>
         </section>
         
         <section id="Skills">
