--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <section id="Skills">
             <h2>My Skills</h2>
             <p>
+                Soft Skills:
+            <ul>
+                <li>sdifah</li>
+                <li>sdifah</li>
+                <li>sdifah</li>
+            </ul>    
+            </p>
+            <p>
+                Hard Skills:
             <ul>
                 <li>sdifah</li>
                 <li>sdifah</li>
