--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,48 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Past Projects</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file -->
+</head>
+<body>
+
+<header>
+    <h1>My Past Projects</h1>
+</header>
+
+<section>
+    <!-- Project 1 -->
+    <div class="project">
+        <h2>Project Name 1</h2>
+        <p>Description of your first project goes here. Explain what it does, technologies used, and any interesting challenges or features.</p>
+        <a href="https://github.com/your-username/project1" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="project">
+        <h2>Project Name 2</h2>
+        <p>Description of your second project goes here. Highlight the tools, libraries, or frameworks you've used and the project's goals.</p>
+        <a href="https://github.com/your-username/project2" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="project">
+        <h2>Project Name 3</h2>
+        <p>Description of your third project. Feel free to include information about any challenges you overcame, or any unique features of the project.</p>
+        <a href="https://github.com/your-username/project3" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Additional Projects can be added in similar blocks -->
+
+</section>
+
+<footer>
+    <p>Made with ❤️ by Shifa Rabaja</p>
+</footer>
+
+</body>
+</html>
