--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Contact Me</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file -->
+</head>
+<body>
 
+<header>
+    <h1>Contact Me</h1>
+</header>
+
+<section>
+    <h2>I'd love to hear from you!</h2>
+    <p>If you have any questions, feedback, or opportunities you'd like to discuss, feel free to reach out using the form below.</p>
+
+    <!-- Contact Form -->
+    <form action="your-backend-script-or-email-handler" method="POST" id="contact-form">
+        <div class="form-group">
+            <label for="name">Your Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+
+        <div class="form-group">
+            <label for="email">Your Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+
+        <div class="form-group">
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" required>
+        </div>
+
+        <div class="form-group">
+            <label for="message">Your Message:</label>
+            <textarea id="message" name="message" rows="6" required></textarea>
+        </div>
+
+        <button type="submit">Send Message</button>
+    </form>
+</section>
+
+
+</body>
+</html>
