--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
 
@@ -18,7 +18,7 @@
     <p>If you have any questions, feedback, or opportunities you'd like to discuss, feel free to reach out using the form below.</p>
 
     <!-- Contact Form -->
-    <form action="your-backend-script-or-email-handler" method="POST" id="contact-form">
+    <form action="https://formspree.io/f/xjkvweqr" method="POST" id="contact-form">
         <div class="form-group">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" required>
@@ -43,6 +43,9 @@
     </form>
 </section>
 
+<footer>
+    <p>Made with ❤️ by Shifa Rabaja</p>
+</footer>
 
 </body>
 </html>
