--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,17 @@
     <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
-
-<header>
-    <h1>My Past Projects</h1>
-</header>
+    <header>
+        <h1>Past Projects</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">About Me</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <section>
     <!-- Project 1 -->
