--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <h1>My Resume</h1>
         <nav>
             <ul>
                 <li><a href="index.html">About Me</a></li>
