--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,17 @@
 </head>
 <body>
 
-<header>
-    <h1>Contact Me</h1>
-</header>
+    <header>
+        <h1>Contact Me!</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">About Me</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <section>
     <h2>I'd love to hear from you!</h2>
