--- a/index.html
+++ b/index.html
@@ -21,32 +21,39 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hello! I am currently a senior attending Thomas A. Edison CTE High School and my CTE major is web and app development. Welcome to my portfolio!</p>
+            <p>Hello! I am a senior at Thomas A. Edison CTE High School, where I specialize in Web and App Development. I have a passion for creating functional and intuitive user experiences through technology. My journey in the tech world started in high school, where I learned essential development skills and explored creative design principles. Welcome to my portfolio!</p>
         </section>
         
         <section id="experience">
             <h2>My Experience</h2>
-            <p>Throughout my high school experience, I've had the priviledge of learning all about human centive design thinking and what it means to create an app. I have learned to empathize with users and target audiences to create a capable and productive app in many types of programs like Figma and code.org. I have also learned.....</p>
+            <p>Throughout my high school journey, I have gained practical experience in various areas of web and app development. I have collaborated with peers and mentors to design and build functional applications and websites that meet user needs. I’ve worked with tools such as Figma for design and code.org for learning coding fundamentals, and I have developed a deep understanding of human-centered design and UX principles.</p>
+            <p>Some highlights of my experience include:</p>
+            <ul>
+                <li>Participating in the Bloomberg Arts Internship where I applied my design and technical skills to improve user workflows.</li>
+                <li>Attending the Summer Design Institute where I learned advanced design principles and worked on collaborative projects.</li>
+                <li>Completing coding challenges at hackathons, sharpening my problem-solving and collaboration skills.</li>
+            </ul>
         </section>
         
-        <section id="Skills">
+        <section id="skills">
             <h2>My Skills</h2>
-            <p>
-                Soft Skills:
+            <p><strong>Soft Skills:</strong></p>
             <ul>
-                <li>sdifah</li>
-                <li>sdifah</li>
-                <li>sdifah</li>
-            </ul>    
-            </p>
-            <p>
-                Hard Skills:
+                <li><strong>Communication:</strong> Able to clearly articulate ideas, explain technical concepts, and work well in team settings.</li>
+                <li><strong>Problem-Solving:</strong> Approaching complex challenges with a logical and creative mindset, finding solutions quickly and efficiently.</li>
+                <li><strong>Time Management:</strong> Managing multiple tasks effectively while meeting deadlines and ensuring quality in my work.</li>
+                <li><strong>Collaboration:</strong> Skilled in working with others in both leadership and supportive roles to achieve shared goals.</li>
+            </ul>
+
+            <p><strong>Hard Skills:</strong></p>
             <ul>
-                <li>sdifah</li>
-                <li>sdifah</li>
-                <li>sdifah</li>
-            </ul>    
-            </p>
+                <li><strong>Languages:</strong> Proficient in HTML, CSS, JavaScript, and Python.</li>
+                <li><strong>Web Development:</strong> Experienced with front-end technologies such as React, HTML5, CSS3, and frameworks like Bootstrap.</li>
+                <li><strong>App Development:</strong> Knowledge of app development using JavaScript frameworks and tools like Figma for design and prototyping.</li>
+                <li><strong>Version Control:</strong> Familiar with Git and GitHub for version control, collaborating on projects, and maintaining code integrity.</li>
+                <li><strong>UX/UI Design:</strong> Solid understanding of user experience (UX) principles and UI design, especially using tools like Figma and Adobe XD to create visually appealing and user-friendly designs.</li>
+                <li><strong>Database Management:</strong> Understanding of databases and back-end technologies such as SQL and Firebase.</li>
+            </ul>
         </section>
     </main>
 </body>
