--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Past Projects</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -21,31 +20,31 @@
         </nav>
     </header>
 
-<section>
-    <!-- Project 1 -->
-    <div class="project">
-        <h2>Project Name 1</h2>
-        <p>Description of your first project goes here. Explain what it does, technologies used, and any interesting challenges or features.</p>
-        <a href="https://github.com/your-username/project1" target="_blank">View Link</a>
-    </div>
+    <section>
+        <!-- Project 1 -->
+        <div class="project">
+            <h2>Congressional App Challenge: "Greenify" App</h2>
+            <p>Greenify is an app concept aimed at promoting sustainable living by helping users adopt environmentally friendly habits. The app likely includes features that encourage eco-friendly actions, track progress in reducing environmental impact, and provide resources or tips on topics like recycling, conserving energy, and reducing waste. The goal is to make sustainability easier and more accessible for users, potentially through reminders, incentives, and actionable steps that contribute to a greener lifestyle.
+</p>
+            <br>
+            <!-- Embed Figma Prototype -->
+            <iframe src="https://www.figma.com/embed?embed_host=www&url=https://www.figma.com/file/your-file-id" width="800" height="600" allowfullscreen></iframe>
+        </div>
 
-    <!-- Project 2 -->
-    <div class="project">
-        <h2>Project Name 2</h2>
-        <p>Description of your second project goes here. Highlight the tools, libraries, or frameworks you've used and the project's goals.</p>
-        <a href="https://github.com/your-username/project2" target="_blank">View Link</a>
-    </div>
+        <!-- Project 2 -->
+        <div class="project">
+            <h2>Project Name 2</h2>
+            <p>Description of your second project goes here. Highlight the tools, libraries, or frameworks you've used and the project's goals.</p>
+            <a href="https://github.com/your-username/project2" target="_blank">View Code on GitHub</a>
+        </div>
 
-    <!-- Project 3 -->
-    <div class="project">
-        <h2>Project Name 3</h2>
-        <p>Description of your third project. Feel free to include information about any challenges you overcame, or any unique features of the project.</p>
-        <a href="https://github.com/your-username/project3" target="_blank">View Link</a>
-    </div>
-
-    <!-- Additional Projects can be added in similar blocks -->
-
-</section>
+        <!-- Project 3 -->
+        <div class="project">
+            <h2>Project Name 3</h2>
+            <p>Description of your third project. Feel free to include information about any challenges you overcame, or any unique features of the project.</p>
+            <a href="https://github.com/your-username/project3" target="_blank">View Code on GitHub</a>
+        </div>
+    </section>
 
 </body>
 </html>
