--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,7 @@
 </p>
             <br>
             <!-- Embed Figma Prototype -->
-            <iframe src="https://www.figma.com/embed?embed_host=www&url=https://www.figma.com/file/your-file-id" width="800" height="600" allowfullscreen></iframe>
-        </div>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/26oz58RjlU0wSIMgQ6hrG3/Congressional-App-Challenge?node-id=72-786&starting-point-node-id=72%3A786&embed-host=share" allowfullscreen></iframe>         </div>
 
         <!-- Project 2 -->
         <div class="project">
