--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,12 @@
         <div class="project">
             <h2>Congressional App Challenge: "Greenify" App</h2>
             <p>Greenify is an app concept aimed at promoting sustainable living by helping users adopt environmentally friendly habits. The app likely includes features that encourage eco-friendly actions, track progress in reducing environmental impact, and provide resources or tips on topics like recycling, conserving energy, and reducing waste. The goal is to make sustainability easier and more accessible for users, potentially through reminders, incentives, and actionable steps that contribute to a greener lifestyle.
-</p>
-            <br>
+</p>   
+            
+            <br> <a href="https://youtu.be/jxHbfl9NLEo?si=_3txlMOWWKQI-pHb" target="_blank">Link to Video Submission!</a>
+<br>
+<br>
+
             <!-- Embed Figma Prototype -->
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/26oz58RjlU0wSIMgQ6hrG3/Congressional-App-Challenge?node-id=72-786&starting-point-node-id=72%3A786&embed-host=share" allowfullscreen></iframe>         </div>
 
