--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,7 @@
         <!-- Project 2 -->
         <div class="project">
             <h2>2024 Infy App Design Challenge</h2>
+<h4>By: Shifa, Emily, Afrin, & Srutha</h4>
             <p>CollieAssist is an app designed to support individuals, including college applicants, by providing assistance with managing daily tasks and alleviating stress during the complex process of college applications. For students, CollieAssist offers tools to organize college application requirements, track deadlines, and receive helpful reminders, which can reduce the overwhelming nature of the application process. By providing structured support, such as information on application timelines, essay prompts, and other requirements, the app aims to relieve stress and empower students to stay on top of their tasks with confidence. This focus on organization and personalized guidance makes CollieAssist a valuable resource for college-bound students navigating this high-stakes period.
 </p>
             <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/nbtG28ejKJfzgo08zkOrdD/Team-SEAS-Collie-Assist-Wireframe?node-id=671-1191&node-type=canvas&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=672%3A1551&show-proto-sidebar=1&embed-host=share" allowfullscreen></iframe>
