--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
                 <h2>MFTA Warehouse Reuse Centers Nationwide Brochure</h2>
                 <p>For my brochure project at the MFTA warehouse, my fellow intern through the Bloomberg Arts Internship and I conducted in-depth research on reuse centers across the U.S. I gathered information on the different types of centers in each state, creating a comprehensive guide for MFTA to know where to donate materials they couldn’t use. The goal was to support MFTA’s sustainability mission by helping them efficiently redirect surplus materials to other centers that share similar goals. This project allowed me to contribute to MFTA’s operations practically, ensuring unused supplies could find new life in communities that would benefit from them.</p>
                 
-                <iframe src="https://www.canva.com/design/DAGOfeXqyxk/4dB2Dt9C1Fx-ApHqJkOnuw/edit?utm_content=DAGOfeXqyxk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" width="100%" height="500px" style="border: none;" allowfullscreen="true"></iframe>
+                <iframe src="https://www.canva.com/design/DAGOfeXqyxk/k0YGC7Pqhz6H80sgB4riPw/view" width="100%" height="500px" style="border: none;" allowfullscreen="true"></iframe>
             </div>
         </section>
     </main>
