--- a/projects.html
+++ b/projects.html
@@ -56,6 +56,13 @@
 <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGOfeXqyxk&#x2F;k0YGC7Pqhz6H80sgB4riPw&#x2F;view?utm_content=DAGOfeXqyxk&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">MFTA Reuse Centers Brochure</a> by Sydney Mendez & Shifa Rabaja
                 <a src="https://www.canva.com/design/DAGOfeXqyxk/4dB2Dt9C1Fx-ApHqJkOnuw/edit?utm_content=DAGOfeXqyxk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
             </div>
+
+             <div class="project">
+                <h2>Loved Pets Animal Shelter Website</h2>
+                <p>Created a website for Loved Pets Animal Shelter</p
+                <a href="https://shifarabaja.github.io/adoptionAgency/">
+            </div>
+
         </section>
     </main>
 
