--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
              <div class="project">
                 <h2>Loved Pets Animal Shelter Website</h2>
                 <p>Created a website for Loved Pets Animal Shelter</p
-                <a href="https://shifarabaja.github.io/adoptionAgency/">Link to Adoption Agency Website</a>
+                <a href="https://shifarabaja.github.io/adoptionAgency/" target="_blank" rel="noopener">Link to Adoption Agency Website</a>
             </div>
 
         </section>
