--- a/resume.html
+++ b/resume.html
@@ -69,8 +69,8 @@
                     <li>Publicity and Marketing - Social Media Coordinator</li>
                     <li>Time Management - Internship/Program Experience</li>
                     <li>Leadership, Academic, and Disciplinary Skills - Bravo Company First Platoon Sergeant JROTC</li>
-                    <li>Certified in Python Coding Language, Coding & App Developing Experience; HTML, CSS, JavaScript - Web & App Development (CTE Major)
-</li>
+                    <li>Certified in Python Coding Language, Coding & App Developing Experience; HTML, CSS, JavaScript - Web & App Development (CTE Major)</li>
+                    <li>Game Design Experience in Unity - C# Scripting, Level Design, and Game Physics</li>
                 </ul>
             </div>
         </section>
